# secret-santa-function

./: .gitignore  LICENSE  README.md  app.yaml  main.py  pyproject.toml  requirements.txt  start-windows.ps1
create/: __init__.py  function.json  generated-template.html  home-template.html
decode/: __init__.py  function.json  name-template.html
shared/: optima.py
