[tool.poetry]
name = "secret-santa-function"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "secret_santa_function"}]

[tool.poetry.dependencies]
python = "^3.9"
azure-functions = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
