[tool.poetry]
name = "secret-santa-function"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "secret_santa_function"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
waitress = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
